force-app/main/default/objects/LLC_BI__Credit_Protection__c/LLC_BI__Credit_Protection__c.object-meta.xml
<CustomObject>
    <description>This object displays the credit protection details related to the selected product(s).</description>
    <label>Credit Protection</label>
    <nameField>
        <displayFormat>Credit Protection-{00000}</displayFormat>
        <label>Credit Protection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Protections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>