force-app/main/default/objects/LLC_BI__Credit_Protection__c/fields/LLC_BI__Cost_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cost_Per_Month__c</fullName>
    <description>The system automatically populates this optional currency field to store the monthly cost of this protection. By default, it is blank.</description>
    <inlineHelpText>This field stores the monthly cost of this protection.</inlineHelpText>
    <label>Cost Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>