force-app/main/default/objects/LLC_BI__Credit_Protection__c/fields/LLC_BI__Coverage_Result__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Coverage_Result__c</fullName>
    <description>The system automatically populates this optional picklist field to store whether the coverage was fully applied, partially applied, or denied. By default, it is blank.</description>
    <inlineHelpText>This field informs the calling application if the requested coverage was fully applied, partially applied, or denied.</inlineHelpText>
    <label>Coverage Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Applied</fullName>
            </value>
            <value>
                <fullName>Partially Applied</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>