force-app/main/default/objects/LLC_BI__Credit_Protection__c/fields/LLC_BI__Drop_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Drop_Code__c</fullName>
    <description>The system automatically populates this optional number field to store a numeric code that indicates the reason the requested protection was denied. By default, it is blank.</description>
    <inlineHelpText>This field stores a numeric code that indicates the reason the requested protection was denied.</inlineHelpText>
    <label>Drop Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>