force-app/main/default/objects/LLC_BI__Credit_Protection__c/fields/LLC_BI__Drop_Reason__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Drop_Reason__c</fullName>
    <description>The system automatically populates this optional text field to store a human-readable description of the reason the requested protection was denied. By default, it is blank.</description>
    <inlineHelpText>This field stores a human-readable description of the reason the requested protection was denied.</inlineHelpText>
    <label>Drop Reason</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>