force-app/main/default/objects/LLC_BI__Credit_Protection__c/fields/LLC_BI__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__lookupKey__c</fullName>
    <description>This field is optional and automatically populated. This field is used to house the unique external ID of this record.</description>
    <externalId>true</externalId>
    <label>lookupKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>