force-app/main/default/objects/LLC_BI__Credit_Protection__c/fields/LLC_BI__Premium__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Premium__c</fullName>
    <description>The system automatically populates this optional currency field to store the total cost of this protection over the term of the loan. By default, it is blank.</description>
    <inlineHelpText>This field stores the total cost of this protection over the term of the loan.</inlineHelpText>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>