force-app/main/default/objects/LLC_BI__Credit_Protection__c/fields/LLC_BI__Pricing_Option__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Pricing_Option__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system uses this optional lookup field to determine the Pricing Option of the selected product. By default, it is blank.</description>
    <inlineHelpText>When populated, the system uses this lookup field to determine the Pricing Option being serviced.</inlineHelpText>
    <label>Pricing Option</label>
    <referenceTo>LLC_BI__Pricing_Option__c</referenceTo>
    <relationshipLabel>Credit Protections</relationshipLabel>
    <relationshipName>Credit_Protections</relationshipName>
    <type>Lookup</type>
</CustomField>