force-app/main/default/objects/LLC_BI__Credit_Protection__c/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system uses this optional lookup field to determine the product represented by this object. By default, it is blank.</description>
    <inlineHelpText>When populated, the system uses this lookup field to determine the product represented.</inlineHelpText>
    <label>Product</label>
    <referenceTo>LLC_BI__Product__c</referenceTo>
    <relationshipLabel>Credit Protections</relationshipLabel>
    <relationshipName>Credit_Protections</relationshipName>
    <type>Lookup</type>
</CustomField>